protox/src/parse/snapshots/protox__parse__tests__parse_text_format_message-9.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "any",
                        span: 0..3,
                    },
                ),
                value: Message(
                    Message {
                        fields: [
                            Field {
                                name: Any(
                                    FullIdent {
                                        parts: [
                                            Ident {
                                                value: "type",
                                                span: 8..12,
                                            },
                                            Ident {
                                                value: "googleapis",
                                                span: 13..23,
                                            },
                                            Ident {
                                                value: "com",
                                                span: 24..27,
                                            },
                                        ],
                                    },
                                    FullIdent {
                                        parts: [
                                            Ident {
                                                value: "foo",
                                                span: 28..31,
                                            },
                                            Ident {
                                                value: "bar",
                                                span: 32..35,
                                            },
                                        ],
                                    },
                                    7..36,
                                ),
                                value: Message(
                                    Message {
                                        fields: [
                                            Field {
                                                name: Ident(
                                                    Ident {
                                                        value: "foo",
                                                        span: 40..43,
                                                    },
                                                ),
                                                value: Scalar(
                                                    String(
                                                        String {
                                                            value: "bar",
                                                            span: 45..50,
                                                        },
                                                    ),
                                                ),
                                                span: 40..50,
                                            },
                                        ],
                                    },
                                    38..52,
                                ),
                                span: 7..52,
                            },
                        ],
                    },
                    5..54,
                ),
                span: 0..54,
            },
        ],
    },
)
